Updated auth-api service so that it leverages the container environment so its port is driven from the configuration.

--- a/auth-api.service
+++ b/auth-api.service
@@ -2,6 +2,7 @@
 Description=Starts the Httpd Auth API Service
 After=dbus.service
 [Service]
-ExecStart=/usr/bin/auth-api --port=3301
+EnvironmentFile=/etc/container-environment
+ExecStart=/usr/bin/auth-api --port=${HTTPD_AUTH_API_SERVICE_PORT}
 [Install]
 WantedBy=multi-user.target
